fixed vh of carousel on small devices

--- a/styles.scss
+++ b/styles.scss
@@ -114,15 +114,24 @@ main {
 .carousel {
   height: 95vh;
   overflow: hidden;
+  @media screen and (max-width: 800px) {
+    height: 50vh;
+  }
   &__imagecontainer {
     max-width: 100%;
     position: relative;
     height: 95vh;
+    @media screen and (max-width: 800px) {
+      height: 50vh;
+    }
   }
   &__image {
     clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 95vh);
     width: 100%;
     height: 100%;
+    @media screen and (max-width: 800px) {
+      clip-path: polygon(0 0, 100% 0, 100% 35vh, 0 45vh);
+    }
   }
 }
 
